add JSON-LD 'sameAs' property for NXNote application in config, release announcement, and pricing page

--- a/_posts/2025-10-24-NxNote 2.0 Released.markdown
+++ b/_posts/2025-10-24-NxNote 2.0 Released.markdown
@@ -18,6 +18,9 @@ jsonld: |
       "url": "https://xsap.net",
       "image": "https://xsap.net/assets/images/nxxii.png",
       "description": "NXNote is a professional AI-powered knowledge management software for SAP experts, designed to organize SAP documentation, process diagrams, project plans, and intelligent workflows. It integrates seamlessly with SAP systems and AI-driven email automation.",
+      "sameAs": [
+        "https://www.wikidata.org/wiki/Q136653267"
+      ],
       "publisher": {
         "@type": "Organization",
         "name": "Shanghai Niaoxun Information Technology Co., Ltd.",
