update download link

--- a/_posts/2025-10-24-NxNote 2.0 Released.markdown
+++ b/_posts/2025-10-24-NxNote 2.0 Released.markdown
@@ -67,5 +67,5 @@ We are excited to announce the official release of NxNote 2.0 — a major update
 
 
 
-[👉 Download Now](/download/xnote2.0.zip)
+[👉 Download Now](/download/nxnote2.0.zip)
 
